force-app/main/default/objects/vlocity_cmt__ContextMappingArgument__c/vlocity_cmt__ContextMappingArgument__c.object-meta.xml
<CustomObject>
    <description>Parameter of a Vlocity Context Mapping. Master-detail child object of Vlocity Context Mapping.</description>
    <label>Vlocity Context Mapping Argument</label>
    <nameField>
        <label>Vlocity Context Mapping Argument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Context Mapping Arguments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>