force-app/main/default/objects/vlocity_cmt__ContextMappingArgument__c/fields/vlocity_cmt__ArgumentSequence__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ArgumentSequence__c</fullName>
    <formula>vlocity_cmt__FunctionArgumentId__r.vlocity_cmt__Sequence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Argument Sequence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>