force-app/main/default/objects/vlocity_cmt__ContextMappingArgument__c/fields/vlocity_cmt__ContextMappingId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ContextMappingId__c</fullName>
    <label>Vlocity Context Mapping</label>
    <referenceTo>vlocity_cmt__ContextMapping__c</referenceTo>
    <relationshipLabel>Where Used (Vlocity Context Mapping Arguments)</relationshipLabel>
    <relationshipName>ContextMappingArguments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>