force-app/main/default/objects/vlocity_cmt__ContextMappingArgument__c/fields/vlocity_cmt__DomainType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DomainType__c</fullName>
    <label>Domain Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Object Lookup</fullName>
            </value>
            <value>
                <fullName>Type in</fullName>
            </value>
            <value>
                <fullName>Context Dimension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>